Began implementing line following on a dummy robot, documenting qtr library

--- a/arduino_code/ref/libraries/qtr/latex/annotated.tex
+++ b/arduino_code/ref/libraries/qtr/latex/annotated.tex
@@ -1,4 +1,4 @@
 \doxysection{Class List}
 Here are the classes, structs, unions and interfaces with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{\mbox{\hyperlink{class_q_t_r}{QTR}} }{\pageref{class_q_t_r}}{}
+\item\contentsline{section}{\mbox{\hyperlink{class_q_t_r}{QTR}} \\*Class to take sensor readings from polulu \doxylink{class_q_t_r}{QTR} digital sensor arrays }{\pageref{class_q_t_r}}{}
 \end{DoxyCompactList}
